--- a/Task3/index.html
+++ b/Task3/index.html
@@ -28,6 +28,9 @@
             display: inline-block;
             padding: 0px 0px 0px 0px;
             margin: 70px 0px 0px 60px;
+            text-decoration: none;
+            color: inherit;
+            cursor: pointer;
         }
 
         .header-ul {
@@ -36,63 +39,92 @@
             padding: 0px 0px 0px 0px;
             position: relative;
             top: -4.2em;
-            margin: 0px 0px 30px 720px;
+            margin: 0px 0px 30px 750px;
         }
 
         li {
             display: inline-block;
             font-size: 20px;
             font-weight: 600;
-            border-radius: 6px;
-            background-color: #D9D9D9;
-            margin: 0px 0px 0px 30px;
+
         }
 
-        li #header-home-a {
-            color: white;
-        }
 
         li a {
             text-decoration: none;
+            cursor: pointer;
             color: black;
         }
 
-        #header-home {
+        .header-btns {
+            display: inline-block;
+            cursor: pointer;
+            background-color: #D9D9D9;
+            border-radius: 8px;
+            padding: 15px 50px 15px 50px;
+            margin: 0px 0px 0px 30px;
+        }
+
+        .header-btns:hover {
+            background-color: #06C0CC;
+        }
+
+        #header-home-a {
+            color: white;
+        }
+
+        .header-home {
             padding: 15px 60px 15px 60px;
             color: white;
             background-color: #06C0CC;
-
+            color: white;
+            border-radius: 6px;
         }
 
-        #header-about-us {
-            padding: 15px 50px 15px 50px;
-            margin: 0px 0px 0px 30px;
-
+        .header-home {
+            cursor: pointer;
+            display: inline-block;
         }
+
+        .header-about-us {
+
+            cursor: pointer;
+            display: inline-block;
+        }
+
 
         .header-dropdown-content {
             display: none;
             position: absolute;
+            right: 13.3em;
+            background-color: white;
+            opacity: 90%;
             z-index: 1;
-            margin: 40px 0px 0px 0px;
+            border-radius: 6px;
+            padding: 20px 0px 0px 0px;
+            margin: 16px 0px 0px 0px;
         }
 
         .header-dropdown-content a {
             display: block;
-            background-color: white;
-            min-width: 150%;
+            min-width: 120%;
             margin: 0px 0px 0px 0px;
-            padding: 10px 0px 10px 10px;
+            padding: 10px 20px 10px 20px;
             opacity: 90%;
         }
 
-        .header-dropdown:hover .header-dropdown-content {
+        .header-about-us:hover .header-dropdown-content {
             display: block;
         }
-        
-        #header-contact-us {
-            padding: 15px 40px 15px 40px;
-            margin: 0px 0px 0px 30px;
+
+        .header-dropdown-content:hover .header-dropdown-content {
+            display: block;
+
+        }
+
+        .header-contact-us {
+            cursor: pointer;
+            display: inline-block;
         }
 
         .img-with-txt {
@@ -114,8 +146,6 @@
             letter-spacing: 1px;
         }
 
-        .image-gallery {}
-
         .img-gallery-txt {
             font-size: 30px;
             font-weight: 700;
@@ -124,7 +154,10 @@
             margin: 40px 0px 10px 0px;
         }
 
-        .images {}
+        .img-shadow-box {
+            border-radius: 40px;
+            box-shadow: 10px 14px 6px #D9D9D9;
+        }
 
         .img {
             display: inline-block;
@@ -149,10 +182,10 @@
         }
 
         .contact-form-txt {
-            font-size: 30px;
-            font-weight: 600;
+            font-size: 34px;
+            font-weight: 700;
             letter-spacing: 1px;
-            padding: 40px 0px 40px 0px;
+            padding: 30px 0px 40px 0px;
             text-align: center;
         }
 
@@ -160,14 +193,15 @@
             display: block;
             font-size: 20px;
             font-weight: 600;
-            padding: 10px 0px 10px 0px;
+            padding: 10px 0px 20px 0px;
             margin: 0px 80px 0px 60px;
         }
 
 
         ::placeholder {
-            color: white;
+            color: #FFFFFF;
             width: 500px;
+            font-weight: 500;
             font-size: 18px;
         }
 
@@ -175,7 +209,7 @@
             display: block;
             text-align: left;
             background-color: #000000;
-            padding: 20px 1040px 20px 20px;
+            padding: 20px 1040px 20px 30px;
             margin: 0px 0px 30px 60px;
             border-radius: 8px;
         }
@@ -185,13 +219,18 @@
             margin: 80px 0px 20px 0px;
         }
 
+        .form-button:hover {
+            background-color: black;
+        }
+
         .form-button {
-            color: white;
+            color: #FFFFFF;
             background-color: #06C0CC;
-            padding: 20px 80px 20px 80px;
+            padding: 20px 90px 20px 90px;
             font-size: 20px;
-            border-radius: 6px;
+            border-radius: 8px;
             font-weight: 600;
+            cursor: pointer;
         }
 
         .boxes-game-div {
@@ -213,24 +252,47 @@
             padding: 80px 0px 650px 0px;
             margin: 40px 70px 20px 70px;
         }
+
         #green {
             position: absolute;
             left: 26em;
             z-index: 3;
-            
+            transition: all 0.3s ease-in-out;
         }
+
+        #green:hover {
+            left: 28em;
+            transition: all 0.3s ease-in-out;
+        }
+
         #red {
             position: absolute;
             left: 40em;
             top: 9em;
             z-index: 2;
+            transition: all 0.3s ease-in-out;
         }
+
+        #red:hover {
+            left: 42em;
+            top: 11em;
+            transition: all 0.3s ease-in-out;
+        }
+
         #blue {
             position: absolute;
-            left:  30em;
+            left: 30em;
             top: 18em;
             z-index: 1;
+            transition: all 0.4s ease-in-out;
         }
+
+        #blue:hover {
+            left: 31em;
+            top: 20em;
+            transition: all 0.4s ease-in-out;
+        }
+
         .footer {
             background-color: #D9D9D9;
             display: inline-block;
@@ -274,6 +336,16 @@
             padding: 10px 40px 5px 10px;
         }
 
+        th a {
+            color: inherit;
+            text-decoration: none;
+        }
+
+        td a {
+            color: inherit;
+            text-decoration: none;
+        }
+
         td {
             opacity: 80%;
         }
@@ -282,28 +354,34 @@
 
 <body>
     <header>
-        <span class="header-logo">
-            <img src="./applelogogroup.svg">
-        </span>
-
+        <a href="#homepage"><span class="header-logo">
+                <img src="./applelogogroup.svg">
+            </span>
+        </a>
         <ul class="header-ul">
-            <li id="header-home">
-                <a id="header-home-a" href="">HOME</a>
-            </li>
-            <li id="header-about-us">
-                <div class="header-dropdown">
-                    <a href="" class="header-dropbtn">ABOUT US</a>
-                    <div class="header-dropdown-content">
-                        <a href="#">1. Menu Item #1</a>
-                        <a href="#">2. Menu Item #2</a>
-                        <a href="#">3. Menu Item #3</a>
-                        <a href="#">4. Menu Item #4</a>
+            <div class="header-btns">
+                <li>
+                    <a id="header-home-a" href="">HOME</a>
+                </li>
+            </div>
+            <div class="header-about-us header-btns">
+                <li id="header-about-us">
+                    <div class="header-dropdown">
+                        <a href="" class="header-dropbtn">ABOUT US</a>
+                        <div class="header-dropdown-content">
+                            <a href="#">1. Menu Item #1</a>
+                            <a href="#">2. Menu Item #2</a>
+                            <a href="#">3. Menu Item #3</a>
+                            <a href="#">4. Menu Item #4</a>
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li id="header-contact-us">
-                <a href="">CONTACT US</a>
-            </li>
+                </li>
+            </div>
+            <div class="header-contact-us header-btns">
+                <li id="header-contact-us">
+                    <a href="" class="header-contactbtn">CONTACT US</a>
+                </li>
+            </div>
         </ul>
     </header>
 
@@ -320,15 +398,15 @@
         <p class="img-gallery-txt">IMAGE GALLERY</p>
         <div class="images">
             <div class="img">
-                <img src="./cluster.svg">
+                <img class="img-shadow-box" src="./clusterpizza-without-shadow.svg">
                 <figcaption class="img-gallery-captions">Cluster</figcaption>
             </div>
             <div class="img">
-                <img src="./newyork.svg">
+                <img class="img-shadow-box" src="./newyork-without-shadow.svg">
                 <figcaption class="img-gallery-captions">New York</figcaption>
             </div>
             <div class="img">
-                <img src="./pizza.svg">
+                <img class="img-shadow-box" src="./pizza-without-shadow.svg">
                 <figcaption class="img-gallery-captions">Pizza</figcaption>
             </div>
         </div>
@@ -362,50 +440,50 @@
     <div class="boxes-game-div">
         <p class="boxes-game-txt">BOXES GAME</p>
         <div class="boxes-game-container">
-            <img  id="green" src="./green.svg">
-            <img  id="red" src="red.svg">
-            <img  id="blue" src="./blue.svg">
+            <img class="img-gallery-hover" id="green" src="./green.svg">
+            <img class="img-gallery-hover" id="red" src="red.svg">
+            <img class="img-gallery-hover" id="blue" src="./blue.svg">
         </div>
     </div>
 
-        <!--6th Section -Footer- starts here-->
+    <!--6th Section -Footer- starts here-->
 
-        <div class="footer">
-            <div class="footer-left">
-                <img class="footer-logo" src="./applelogogroup.svg">
-                <p class="footer-txt">Apple Inc. is an American multinational technology company that
-                    specializes in consumer electronics, software and online services
-                    headquartered in Cupertino, California, United States</p>
-            </div>
-
-            <div class="footer-right">
-                <table class="footer-table">
-                    <tr>
-                        <th>Product</th>
-                        <th>Address</th>
-                        <th>Links</th>
-                    </tr>
-
-                    <tr>
-                        <td>Theme Design</td>
-                        <td>Theme Design</td>
-                        <td>Theme Design</td>
-                    </tr>
-
-                    <tr>
-                        <td>Plugin Design</td>
-                        <td>Plugin Design</td>
-                        <td>Plugin Design</td>
-                    </tr>
-
-                    <tr>
-                        <td>Wordpress</td>
-                        <td>Wordpress</td>
-                        <td>Wordpress</td>
-                    </tr>
-                </table>
-            </div>
+    <div class="footer">
+        <div class="footer-left">
+            <img class="footer-logo" src="./applelogogroup.svg">
+            <p class="footer-txt">Apple Inc. is an American multinational technology company that
+                specializes in consumer electronics, software and online services
+                headquartered in Cupertino, California, United States</p>
         </div>
+
+        <div class="footer-right">
+            <table class="footer-table">
+                <tr>
+                    <th><a href="#Product">Product</a></th>
+                    <th><a href="#Address">Address</a></th>
+                    <th><a href="#Links">Links</a></th>
+                </tr>
+
+                <tr>
+                    <td><a href="#ThemeDesign">Theme Design</a></td>
+                    <td><a href="#ThemeDesign">Theme Design</a></td>
+                    <td><a href="#ThemeDesign">Theme Design</a></td>
+                </tr>
+
+                <tr>
+                    <td><a href="#PluginDesign">Plugin Design</a></td>
+                    <td><a href="#PluginDesign">Plugin Design</a></td>
+                    <td><a href="#PluginDesign">Plugin Design</a></td>
+                </tr>
+
+                <tr>
+                    <td><a href="">Wordpress</a></td>
+                    <td><a href="">Wordpress</a></td>
+                    <td><a href="">Wordpress</a></td>
+                </tr>
+            </table>
+        </div>
+    </div>
 
 </body>
 
